RESOLVED FIXED306593
[YARR] Fix capture group reset in JIT-compiled fixed-count non-capturing parentheses
https://bugs.webkit.org/show_bug.cgi?id=306593
Summary [YARR] Fix capture group reset in JIT-compiled fixed-count non-capturing pare...
Sosuke Suzuki
Reported 2026-01-29 19:35:43 PST
...
Attachments
EWS
Comment 1 2026-01-29 23:29:43 PST
Committed 306476@main (7c8968c2ec20): <https://commits.webkit.org/306476@main> Reviewed commits have been landed. Closing PR #57531 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2026-01-29 23:30:18 PST
Note You need to log in before you can comment on or make changes to this bug.