[YARR] Fix capture group reset in JIT-compiled fixed-count non-capturing parentheses https://bugs.webkit.org/show_bug.cgi?id=306593

Reviewed by Yusuke Suzuki.

The recent optimization for non-capturing parentheses with fixed-count quantifiers
(bug 305284) introduced a regression where nested capture groups were not being
reset to undefined at the start of each iteration.

ECMAScript specification requires that capture groups within a quantified group
are reset to undefined at the beginning of each iteration. The existing
ParenthesesSubpatternBegin implementation handles this via saveParenContext()
which calls clearSubpatternStart() for each nested capture. However, the new
ParenthesesSubpatternFixedCountBegin was missing this logic.

This patch adds the capture group clearing code to ParenthesesSubpatternFixedCountBegin,
matching the behavior of the interpreter and the existing JIT implementation for
non-fixed-count quantifiers.

Test: JSTests/stress/regexp-fixed-count-nested-captures-reset.js

* JSTests/stress/regexp-fixed-count-nested-captures-reset.js: Added.
(shouldBe):
(testDuplicateNamedGroupsWithFixedCount):
(testCaptureResetInVariousPatterns):
(testNestedNonCapturingWithCaptures):
(testNonCapturingWithoutNestedCaptures):
* Source/JavaScriptCore/yarr/YarrJIT.cpp:

Canonical link: https://commits.webkit.org/306476@main